--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,65 @@
+ul,
+h1 {
+  margin: 0;
+}
+
+html {
+  background-image: url(./img/background.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+}
+
 #content {
-    background-color: aqua;
+  display: grid;
+  grid-template:
+    "header" auto
+    "section" 1fr
+    "footer" auto / 1fr;
+    min-height: 100vh;
+}
+
+.header,
+.footer,
+.section {
+  background-color: #5a7b5e;
+}
+
+img {
+  width: 250px;
+  height: 250px;
+}
+
+.section {
+  grid-area: section;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5% 20%;
+}
+
+.header ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  gap: 2rem;
+  font-size: 2rem;
+}
+.header {
+  grid-area: header;
+}
+.footer ul {
+  grid-area: footer;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+  gap: 5rem;
+}
+.footer,
+.header {
+    padding: 1rem;
+}
+a {
+  text-decoration: none;
+  color: black;
 }
